less: prevent source in <pre> from wrapping
bootstrap wraps the text in <pre>s by default, this makes reading
source code harder since you can confuse the wrapped line as a new one.

--- a/cmd/gddo-server/less/local.less
+++ b/cmd/gddo-server/less/local.less
@@ -12,6 +12,13 @@ code {
   padding: 0;
 }
 
+pre {
+  overflow-x: auto;
+  word-wrap: normal;
+  word-break: normal;
+  white-space: pre;
+}
+
 .import {
   padding: 0;
   border: 0 none black;
